# qortexProject

./: .env_example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
music/: admin.py  models.py  serializers.py  urls.py  views.py
music/tests/: conftest.py  factories.py  test_album.py  test_artist.py  test_song.py  test_track.py
qortexProject/: asgi.py  settings.py  urls.py  wsgi.py
