[tool.poetry]
name = "qortexproject"
version = "0.1.0"
description = ""
authors = ["arturkalimullin <noti1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-environ = "^0.9.0"
drf-spectacular = "^0.25.1"
djangorestframework = "^3.14.0"
whitenoise = "^6.4.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
